--- a/src/components/SearchBarResults/SearchBarResults.scss
+++ b/src/components/SearchBarResults/SearchBarResults.scss
@@ -1,14 +1,22 @@
 @import 'styles/theme';
 
-.searchbar-results {
+.searchbar-results.columns {
   position: absolute;
   top: 70px;
   left: 0;
   right: 0;
+  z-index: 900;
 
-  .results-content {
-    background-color: #ffffff;
-    border: 1px solid #cacaca;
+  .column {
+
+    .results-content {
+      background-color: #ffffff;
+      border: 1px solid #cacaca;
+  
+      .results-status {
+
+      }
+    }
   }
 }
 
