remove useless classes in searchbar

--- a/src/components/SearchBarResults/SearchBarResults.scss
+++ b/src/components/SearchBarResults/SearchBarResults.scss
@@ -1,38 +1,35 @@
 @import 'styles/theme';
 
-.searchbar-results.columns {
+.searchbar-results {
   position: absolute;
   top: 70px;
   left: 0;
   right: 0;
   z-index: 900;
 
-  .column {
+  .results-content {
+    background-color: $white;
+    border: 1px solid $light-color;
+    border-radius: $radius;
+    @include big-shadow();
 
-    .results-content {
-      background-color: $white;
-      border: 1px solid $light-color;
-      border-radius: $radius;
-      @include big-shadow();
-  
-      .results-status {
-        @include h-padding(16px);
-        font-size: 0.9rem;
-        font-style: italic;
-        color: $grey;
-        min-height: 40px;
-        line-height: 40px;
-      }
+    .results-status {
+      @include h-padding(16px);
+      font-size: 0.9rem;
+      font-style: italic;
+      color: $grey;
+      min-height: 40px;
+      line-height: 40px;
+    }
 
-      .results-items {
-        ul {
-          &:first-child {
-            border-top: 1px solid $light-color;
-          }
-        
-          &:last-child {
-            border-bottom: 1px solid $light-color;
-          }
+    .results-items {
+      ul {
+        &:first-child {
+          border-top: 1px solid $light-color;
+        }
+      
+        &:last-child {
+          border-bottom: 1px solid $light-color;
         }
       }
     }
