--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -4,6 +4,7 @@
   .homepage-header {
     margin-top: 20px;
     margin-bottom: 20px;
+    @include h-padding(24px);
     text-align: center;
     color: $primary-color;
     font-size : 1.5rem;
