remove useless div in searchbar

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -4,7 +4,7 @@
   margin-top: 0;
   background-color: $dark-primary-color;
 
-  & > .column > div {
+  & > .column {
     position: relative;
   }
 
