add margin to info tiles on mobile

--- a/src/components/InfoPage/InfoPage.scss
+++ b/src/components/InfoPage/InfoPage.scss
@@ -78,6 +78,10 @@
     .info-species,
     .info-vehicle,
     .info-starship {
+
+      margin-left: 16px;
+      margin-right: 16px;
+
       .illustration {
         img {
           float: none !important;
